<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Under The Kotlin Tree</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- START ERROR MESSAGES -->
    <string name="error_message_connection_time_out" tools:keep="@string/error_message_connection_time_out">Connection time out</string>
    <string name="error_message_no_connection" tools:keep="@string/error_message_no_connection">Could not establish a connection to the server</string>

    <string name="label_name">User name</string>
    <string name="label_password">Password</string>

    <string name="label_host">Host</string>
    <string name="label_port">Port</string>
    <string name="label_use_https">Use HTTPS</string>

    <string name="action_next">Next</string>
    <string name="message_configuration_saved">Configuration saved!</string>
    <string name="error_invalid_input">Invalid input!</string>
    <string name="error_message_bad_request" tools:keep="@string/error_message_bad_request">Bad request. Ooops :$</string>
    <string name="message_double_press_to_exit">Press \'back\' again to exit.</string>
    <string name="label_user_list">Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_message_no_rout_to_host" tools:keep="@string/error_message_no_rout_to_host">Couldn\'t find rout to host</string>
    <string name="action_logout">Log out</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_general_info">General Info</string>
    <string name="label_gender">Gender</string>
    <string name="label_gender_male">Male</string>
    <string name="label_gender_female">Female</string>
    <string name="label_language">Language</string>
    <string name="label_phone_model">Phone model</string>
    <string name="label_computer_model">Computer model</string>
    <string name="error_message_rpc_error">RPC_ERROR!</string>
    <string name="label_user_creation">Create user</string>
    <!-- END ERROR MESSAGES -->

</resources>
