<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/userInfoAvatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/ic_user_avatar" />

        <EditText
            android:id="@+id/userInfoFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red_outline"
            android:hint="@string/label_first_name"
            android:padding="@dimen/spacing_mid_low" />


        <EditText
            android:id="@+id/userInfoLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red_outline"
            android:hint="@string/label_last_name"
            android:padding="@dimen/spacing_mid_low" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_gender_male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_gender_female" />
        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height_tiny"
            android:background="@drawable/outline_dark_gray">

            <Spinner
                android:id="@+id/userInfoLanguageDropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <EditText
            android:id="@+id/userInfoPhoneModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red_outline"
            android:hint="@string/label_phone_model"
            android:padding="@dimen/spacing_mid_low"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/userInfoComputerModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red_outline"
            android:hint="@string/label_computer_model"
            android:padding="@dimen/spacing_mid_low" />

        <RadioGroup
            android:id="@+id/userInfoBusinessUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RadioGroup>

    </LinearLayout>

</ScrollView>