<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <include layout="@layout/view_toolbar_standard" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_mid_mid"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settingsHostInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_host">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/settingsHostInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height_tiny"
                android:background="@drawable/selector_red_outline"
                android:inputType="textWebEditText"
                android:padding="@dimen/spacing_small" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settingsPortInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_mid_mid"
            android:hint="@string/label_port"
            app:layout_constraintTop_toBottomOf="@id/settingsHostInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/settingsPortInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height_tiny"
                android:background="@drawable/selector_red_outline"
                android:inputType="number"
                android:maxLength="5"
                android:padding="@dimen/spacing_small" />
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:textColor="@color/text_gray"
            android:id="@+id/settingsUseHttp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height_tiny"
            android:layout_marginTop="@dimen/spacing_mid_mid"
            android:padding="@dimen/spacing_small"
            android:text="@string/label_use_https"
            app:layout_constraintTop_toBottomOf="@id/settingsPortInputLayout" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/settingsButtonConfirm"
        style="@style/MaterialButtonRed"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>